--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         <span><img src="images/logo.svg" alt=""></span>
       </div>
 
-      <div id="js-nav-toggle" class="nav-toggle">
+      <div class="nav-toggle">
         <span><img src="images/icon-menu.svg" alt="hamburger-menu"></span>
       </div>
 
-      <ul id="js-slide-bar" class="slide-bar">
-        <span id="js-close-icon" class="close-icon">
+      <ul class="slide-bar">
+        <span class="close-icon">
           <img src="images/icon-menu-close.svg" alt="close-icon">
         </span>
 
